--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,9 +5,9 @@ NODE_ENV=development
 # Frontend URL for CORS
 FRONTEND_URL=http://localhost:5173
 
-# Database (Supabase) - will be added in Step 1.3
-# SUPABASE_URL=
-# SUPABASE_KEY=
+# Database (Supabase)
+SUPABASE_URL=https://uufhfkvstwyxgnilrpbq.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Gemini AI - will be added in Step 1.4
 # GEMINI_API_KEY=
