--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,18 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["detective", "game", "ai", "chat", "api"],
+  "keywords": [
+    "detective",
+    "game",
+    "ai",
+    "chat",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
